new resume update

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
-body {
+html{
 	background-color: cyan;
+}
+
+body {
 	color: black;
 	font-size: 1rem;
 }
@@ -11,7 +14,7 @@ a {
 
 .hd {
 	border: 0.5vh solid black;
-	background-image: linear-gradient(gold, transparent, transparent, transparent);
+	background-image: linear-gradient(cyan, transparent, transparent, white);
 	text-align: center;
 	scale: 75%;
 }
@@ -69,4 +72,8 @@ h2{
 .half {
 	width: 45vw;
 	float: left;
+}
+
+p{
+	max-width: 80%;
 }
