--- a/newstyles.css
+++ b/newstyles.css
@@ -35,7 +35,8 @@ a {
 .bioBox{
     color: #50fa7b;
     margin-left: 4%;
-    max-width: 50%
+    max-width: 50%;
+    font-size: 1.3rem;
 }
 
 .codeChunk {
@@ -51,3 +52,25 @@ a {
 .ifStatement{
     margin-left: 2%;
 }
+
+.typewriter {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    /* border-right: .15em solid orange; The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 4.5s steps(100, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
